# openrelik-worker-dissect-ncsc-nl

./: .gitignore  Dockerfile  README.md  openrelik.yaml  pyproject.toml
.github/workflows/: docker-image.yaml
src/: app.py  target_info.py  target_query_bundle.py  tasks.py
tests/: test_target_info.py  test_target_query_bundle.py  test_tasks.py
