[project]
name = "openrelik-worker-dissect-ncsc-nl"
version = "0.1.0"
description = "Execute Dissect CLI recipes (like target-info) against disk images inside OpenRelik."
readme = "README.md"
requires-python = "<4.0,>=3.11"
authors = [
    {name = "OpenRelik Contributors"},
]
dependencies = [
    "celery[redis]<6.0.0,>=5.4.0",
    "dissect<4.0.0,>=3.0.0",
    "openrelik-worker-common<1.0.0,>=0.16.0",
    "yara-python<5.0.0,>=4.3.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.uv]
default-groups = []
